--- a/config/final.yml
+++ b/config/final.yml
@@ -1,6 +1,7 @@
----
-blobstore:
-  provider: local
-  options:
-    blobstore_path: /tmp/blobs/avalanche-boshrelease
 final_name: avalanche
+blobstore:
+  provider: s3
+  options:
+    bucket_name: a9s-blobs
+    endpoint: https://s3-eu-west-1.amazonaws.com
+    region: eu-west-1
